<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/include_toolbar"/>
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background_material_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/gray_light">
        <LinearLayout
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_square"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/tab_square"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="?colorPrimary"
                android:text="@string/tab_1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/tab_contact"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="?colorPrimary"
                android:text="@string/tab_2"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/tab_find"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="?colorPrimary"
                android:text="@string/tab_3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@mipmap/tab_note"
                android:layout_marginBottom="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="?colorPrimary"
                android:text="@string/tab_4"/>
        </LinearLayout>
    </LinearLayout>
        
    





</LinearLayout>
