<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <include layout="@layout/include_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/register_username" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/register_password" />
        </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/ed_password_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/register_password_two" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/register_email" />
    </android.support.design.widget.TextInputLayout>
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="?colorPrimary"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="#585858"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true">

            <Button
                android:id="@+id/ed_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="注册"
                android:background="?colorPrimary"
                android:textColor="@android:color/white"/>

        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
    <!--增加修改头像-->
    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/ed_reg_mail"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="请输入邮箱"-->
        <!--android:layout_marginTop="80dp"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--app:met_iconLeft="@mipmap/ic_thumb_up_grey"-->
        <!--app:met_iconPadding="0dp" />-->

    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/ed_reg_pass"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="请输入密码"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--android:maxLines="1"-->
        <!--android:inputType="textPassword"-->
        <!--app:met_iconLeft="@mipmap/ic_thumb_up_grey"-->
        <!--app:met_iconPadding="0dp" />-->

    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/ed_reg_pass2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="再次确认密码"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--app:met_iconLeft="@mipmap/ic_thumb_up_grey"-->
        <!--app:met_iconPadding="0dp" />-->

    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
        <!--android:id="@+id/ed_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="请设置昵称"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginLeft="32dp"-->
        <!--android:layout_marginRight="32dp"-->
        <!--app:met_iconLeft="@mipmap/ic_thumb_up_grey"-->
        <!--app:met_iconPadding="0dp" />-->



</RelativeLayout>